# MelonMCP

./: .gitignore  .gitmodules  .mcp.json  .renderer_frame  CLAUDE.md  requirements.txt  settings.default.json
melonds_mcp/: __init__.py  __main__.py  bridge.py  client.py  constants.py  emulator.py  journal.py  libmelonds.py  recorder.py  recording_server.py  renderer.py  server.py  settings.py  streamer.py  viewer.py
scripts/: benchmark_skip_render.py  build_libmelonds.sh  commentary_hook.sh  commentary_hook_debug.sh  commentary_pretool_capture.sh  commentary_pretool_debug.sh  recording_server.sh
shim/: CMakeLists.txt  melonds_shim.cpp  platform_stubs.cpp
tests/: test_advance_frames_until.py  test_checkpoints.py  test_constants.py  test_journal.py  test_macros.py  test_settings.py  test_watches.py
